style: change "content" background-color

--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -1,4 +1,5 @@
 .content {
+    background-color: #E9ECEF;
     flex-grow: 1;
     display: flex;
     flex-direction: column; /* Asegura que los hijos se organicen en columna */
