--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -16,3 +16,13 @@
     height: 100vh; /* o min-height: 100vh */
     overflow: hidden;
 }
+
+.error {
+    color: red;
+    font-size: 12px;
+    margin-top: 5px;
+}
+
+.is-invalid {
+    border-color: red;
+}
